# ethereum

./: pyproject.toml
.github/workflows/: run.yml
src/: main.py
src/ingest/: bigquery_data.py
src/transforms/: datasets.py
